Completed photo uploading
And import duty calculation for cars